compiler-const/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    K_EXIT
    PERIOD

Grammar

Rule 0     S' -> program
Rule 1     program -> K_PROGRAM IDENTIFIER LCURLY program_body RCURLY
Rule 2     program_body -> function program_body
Rule 3     program_body -> procedure program_body
Rule 4     program_body -> empty
Rule 5     function -> K_FUNCTION K_INTEGER IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
Rule 6     function -> K_FUNCTION K_DOUBLE IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
Rule 7     function -> K_FUNCTION K_STRING IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
Rule 8     procedure -> K_PROCEDURE IDENTIFIER LPAREN RPAREN LCURLY scope_body RCURLY
Rule 9     procedure -> K_PROCEDURE IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
Rule 10    arguments -> variable_definition arguments
Rule 11    arguments -> COMMA arguments
Rule 12    arguments -> empty
Rule 13    scope_body -> statement scope_body
Rule 14    scope_body -> function scope_body
Rule 15    scope_body -> procedure scope_body
Rule 16    scope_body -> empty
Rule 17    statement -> variable_definition SEMI
Rule 18    statement -> variable_declaration SEMI
Rule 19    statement -> variable_assignment SEMI
Rule 20    statement -> function_call SEMI
Rule 21    statement -> function_return SEMI
Rule 22    statement -> procedure_call SEMI
Rule 23    statement -> variable_decrement_increment SEMI
Rule 24    statement -> if_statement
Rule 25    statement -> do_statement
Rule 26    statement -> while_statement
Rule 27    while_statement -> K_WHILE LPAREN boolean_logic RPAREN LCURLY scope_body RCURLY
Rule 28    while_statement -> K_WHILE LPAREN boolean_logic RPAREN statement
Rule 29    do_statement -> K_DO LPAREN variable_assignment SEMI boolean_logic SEMI variable_assignment RPAREN LCURLY scope_body RCURLY
Rule 30    do_statement -> K_DO LPAREN variable_definition SEMI boolean_logic SEMI variable_assignment RPAREN LCURLY scope_body RCURLY
Rule 31    do_statement -> K_DO LPAREN variable_assignment SEMI boolean_logic SEMI variable_decrement_increment RPAREN LCURLY scope_body RCURLY
Rule 32    do_statement -> K_DO LPAREN variable_definition SEMI boolean_logic SEMI variable_decrement_increment RPAREN LCURLY scope_body RCURLY
Rule 33    do_statement -> K_DO LPAREN variable_assignment SEMI boolean_logic SEMI variable_assignment RPAREN statement
Rule 34    do_statement -> K_DO LPAREN variable_definition SEMI boolean_logic SEMI variable_assignment RPAREN statement
Rule 35    do_statement -> K_DO LPAREN variable_assignment SEMI boolean_logic SEMI variable_decrement_increment RPAREN statement
Rule 36    do_statement -> K_DO LPAREN variable_definition SEMI boolean_logic SEMI variable_decrement_increment RPAREN statement
Rule 37    if_statement -> if
Rule 38    if_statement -> if K_ELSE after_else
Rule 39    if -> K_IF LPAREN boolean_logic RPAREN K_THEN statement
Rule 40    if -> K_IF LPAREN boolean_logic RPAREN K_THEN LCURLY scope_body RCURLY
Rule 41    if -> empty
Rule 42    after_else -> statement
Rule 43    after_else -> LCURLY scope_body RCURLY
Rule 44    after_else -> if K_ELSE after_else
Rule 45    function_call -> built_in_functions LPAREN function_call_args RPAREN
Rule 46    function_call -> IDENTIFIER LPAREN function_call_args RPAREN
Rule 47    function_return -> K_RETURN IDENTIFIER
Rule 48    function_return -> K_RETURN ICONSTANT
Rule 49    function_return -> K_RETURN DCONSTANT
Rule 50    function_return -> K_RETURN SCONSTANT
Rule 51    function_return -> K_RETURN function_call
Rule 52    function_return -> K_RETURN variable_assignment
Rule 53    procedure_call -> IDENTIFIER LPAREN procedure_call_args RPAREN
Rule 54    built_in_functions -> K_PRINT_INTEGER
Rule 55    built_in_functions -> K_PRINT_DOUBLE
Rule 56    built_in_functions -> K_PRINT_STRING
Rule 57    built_in_functions -> K_READ_INTEGER
Rule 58    built_in_functions -> K_READ_DOUBLE
Rule 59    built_in_functions -> K_READ_STRING
Rule 60    procedure_call_args -> identifiers
Rule 61    procedure_call_args -> term
Rule 62    function_call_args -> identifiers function_call_args
Rule 63    function_call_args -> term function_call_args
Rule 64    function_call_args -> empty
Rule 65    variable_decrement_increment -> IDENTIFIER INCREMENT
Rule 66    variable_decrement_increment -> IDENTIFIER DECREMENT
Rule 67    variable_assignment -> IDENTIFIER ASSIGN variable_assignment
Rule 68    variable_assignment -> IDENTIFIER ASSIGN function_call
Rule 69    variable_assignment -> IDENTIFIER ASSIGN expression
Rule 70    variable_assignment -> IDENTIFIER ASSIGN_DIVIDE expression
Rule 71    variable_assignment -> IDENTIFIER ASSIGN_MULTIPLY expression
Rule 72    variable_assignment -> IDENTIFIER ASSIGN_PLUS expression
Rule 73    variable_assignment -> IDENTIFIER ASSIGN_MINUS expression
Rule 74    variable_assignment -> IDENTIFIER ASSIGN_MOD expression
Rule 75    variable_assignment -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN variable_assignment
Rule 76    variable_assignment -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN function_call
Rule 77    variable_assignment -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN expression
Rule 78    variable_assignment -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN_DIVIDE expression
Rule 79    variable_assignment -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN_MULTIPLY expression
Rule 80    variable_assignment -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN_PLUS expression
Rule 81    variable_assignment -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN_MINUS expression
Rule 82    variable_assignment -> IDENTIFIER LBRACKET expression RBRACKET ASSIGN_MOD expression
Rule 83    variable_assignment -> IDENTIFIER LBRACKET variable_decrement_increment RBRACKET ASSIGN variable_assignment
Rule 84    variable_assignment -> IDENTIFIER LBRACKET variable_decrement_increment RBRACKET ASSIGN expression
Rule 85    variable_assignment -> IDENTIFIER LBRACKET variable_decrement_increment RBRACKET ASSIGN_DIVIDE expression
Rule 86    variable_assignment -> IDENTIFIER LBRACKET variable_decrement_increment RBRACKET ASSIGN_MULTIPLY expression
Rule 87    variable_assignment -> IDENTIFIER LBRACKET variable_decrement_increment RBRACKET ASSIGN_PLUS expression
Rule 88    variable_assignment -> IDENTIFIER LBRACKET variable_decrement_increment RBRACKET ASSIGN_MINUS expression
Rule 89    variable_assignment -> IDENTIFIER LBRACKET variable_decrement_increment RBRACKET ASSIGN_MOD expression
Rule 90    variable_declaration -> variable_definition ASSIGN expression identifiers
Rule 91    variable_definition -> K_INTEGER identifiers
Rule 92    variable_definition -> K_DOUBLE identifiers
Rule 93    variable_definition -> K_STRING identifiers
Rule 94    identifiers -> IDENTIFIER identifiers
Rule 95    identifiers -> IDENTIFIER LBRACKET expression RBRACKET identifiers
Rule 96    identifiers -> IDENTIFIER LBRACKET variable_decrement_increment RBRACKET identifiers
Rule 97    identifiers -> COMMA identifiers
Rule 98    identifiers -> empty
Rule 99    variable_definition -> K_INTEGER IDENTIFIER LBRACKET RBRACKET
Rule 100   variable_definition -> K_DOUBLE IDENTIFIER LBRACKET RBRACKET
Rule 101   variable_definition -> K_STRING IDENTIFIER LBRACKET RBRACKET
Rule 102   variable_definition -> K_INTEGER IDENTIFIER LBRACKET expression RBRACKET
Rule 103   variable_definition -> K_DOUBLE IDENTIFIER LBRACKET expression RBRACKET
Rule 104   variable_definition -> K_STRING IDENTIFIER LBRACKET expression RBRACKET
Rule 105   variable_definition -> K_INTEGER IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
Rule 106   variable_definition -> K_DOUBLE IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
Rule 107   variable_definition -> K_STRING IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
Rule 108   boolean_logic -> arithmetic_logic DAND arithmetic_logic
Rule 109   boolean_logic -> arithmetic_logic DOR arithmetic_logic
Rule 110   boolean_logic -> NOT arithmetic_logic
Rule 111   boolean_logic -> arithmetic_logic
Rule 112   arithmetic_logic -> function_call DEQ function_call
Rule 113   arithmetic_logic -> function_call GEQ function_call
Rule 114   arithmetic_logic -> function_call GT function_call
Rule 115   arithmetic_logic -> function_call LEQ function_call
Rule 116   arithmetic_logic -> function_call LT function_call
Rule 117   arithmetic_logic -> function_call NE function_call
Rule 118   arithmetic_logic -> function_call DEQ expression
Rule 119   arithmetic_logic -> function_call GEQ expression
Rule 120   arithmetic_logic -> function_call GT expression
Rule 121   arithmetic_logic -> function_call LEQ expression
Rule 122   arithmetic_logic -> function_call LT expression
Rule 123   arithmetic_logic -> function_call NE expression
Rule 124   arithmetic_logic -> expression DEQ expression
Rule 125   arithmetic_logic -> expression GEQ expression
Rule 126   arithmetic_logic -> expression GT expression
Rule 127   arithmetic_logic -> expression LEQ expression
Rule 128   arithmetic_logic -> expression LT expression
Rule 129   arithmetic_logic -> expression NE expression
Rule 130   arithmetic_logic -> expression DEQ function_call
Rule 131   arithmetic_logic -> expression GEQ function_call
Rule 132   arithmetic_logic -> expression GT function_call
Rule 133   arithmetic_logic -> expression LEQ function_call
Rule 134   arithmetic_logic -> expression LT function_call
Rule 135   arithmetic_logic -> expression NE function_call
Rule 136   expression -> term PLUS expression
Rule 137   expression -> term MINUS expression
Rule 138   expression -> term
Rule 139   term -> factor DIVIDE term
Rule 140   term -> factor MULTIPLY term
Rule 141   term -> factor MOD term
Rule 142   term -> factor
Rule 143   factor -> LPAREN expression RPAREN
Rule 144   factor -> ICONSTANT
Rule 145   factor -> DCONSTANT
Rule 146   factor -> SCONSTANT
Rule 147   factor -> MINUS ICONSTANT
Rule 148   factor -> MINUS DCONSTANT
Rule 149   factor -> IDENTIFIER
Rule 150   factor -> MINUS IDENTIFIER
Rule 151   factor -> IDENTIFIER LBRACKET expression RBRACKET
Rule 152   factor -> IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
Rule 153   factor -> MINUS IDENTIFIER LBRACKET expression RBRACKET
Rule 154   factor -> MINUS IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
Rule 155   empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 67 68 69 75 76 77 83 84 90
ASSIGN_DIVIDE        : 70 78 85
ASSIGN_MINUS         : 73 81 88
ASSIGN_MOD           : 74 82 89
ASSIGN_MULTIPLY      : 71 79 86
ASSIGN_PLUS          : 72 80 87
COMMA                : 11 97
COMMENT              : 
DAND                 : 108
DCONSTANT            : 49 145 148
DECREMENT            : 66
DEQ                  : 112 118 124 130
DIVIDE               : 139
DOR                  : 109
GEQ                  : 113 119 125 131
GT                   : 114 120 126 132
ICONSTANT            : 48 144 147
IDENTIFIER           : 1 5 6 7 8 9 46 47 53 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 94 95 96 99 100 101 102 103 104 105 106 107 149 150 151 152 153 154
INCREMENT            : 65
K_DO                 : 29 30 31 32 33 34 35 36
K_DOUBLE             : 6 92 100 103 106
K_ELSE               : 38 44
K_EXIT               : 
K_FUNCTION           : 5 6 7
K_IF                 : 39 40
K_INTEGER            : 5 91 99 102 105
K_PRINT_DOUBLE       : 55
K_PRINT_INTEGER      : 54
K_PRINT_STRING       : 56
K_PROCEDURE          : 8 9
K_PROGRAM            : 1
K_READ_DOUBLE        : 58
K_READ_INTEGER       : 57
K_READ_STRING        : 59
K_RETURN             : 47 48 49 50 51 52
K_STRING             : 7 93 101 104 107
K_THEN               : 39 40
K_WHILE              : 27 28
LBRACKET             : 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 95 96 99 100 101 102 103 104 105 106 107 151 152 153 154
LCURLY               : 1 5 6 7 8 9 27 29 30 31 32 40 43
LEQ                  : 115 121 127 133
LPAREN               : 5 6 7 8 9 27 28 29 30 31 32 33 34 35 36 39 40 45 46 53 143
LT                   : 116 122 128 134
MINUS                : 137 147 148 150 153 154
MOD                  : 141
MULTIPLY             : 140
NE                   : 117 123 129 135
NOT                  : 110
PERIOD               : 
PLUS                 : 136
RBRACKET             : 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 95 96 99 100 101 102 103 104 105 106 107 151 152 153 154
RCURLY               : 1 5 6 7 8 9 27 29 30 31 32 40 43
RPAREN               : 5 6 7 8 9 27 28 29 30 31 32 33 34 35 36 39 40 45 46 53 143
SCONSTANT            : 50 146
SEMI                 : 17 18 19 20 21 22 23 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36
error                : 

Nonterminals, with rules where they appear

after_else           : 38 44
arguments            : 5 6 7 9 10 11
arithmetic_logic     : 108 108 109 109 110 111
boolean_logic        : 27 28 29 30 31 32 33 34 35 36 39 40
built_in_functions   : 45
do_statement         : 25
empty                : 4 12 16 41 64 98
expression           : 69 70 71 72 73 74 75 76 77 77 78 78 79 79 80 80 81 81 82 82 84 85 86 87 88 89 90 95 102 103 104 118 119 120 121 122 123 124 124 125 125 126 126 127 127 128 128 129 129 130 131 132 133 134 135 136 137 143 151 153
factor               : 139 140 141 142
function             : 2 14
function_call        : 20 51 68 76 112 112 113 113 114 114 115 115 116 116 117 117 118 119 120 121 122 123 130 131 132 133 134 135
function_call_args   : 45 46 62 63
function_return      : 21
identifiers          : 60 62 90 91 92 93 94 95 96 97
if                   : 37 38 44
if_statement         : 24
procedure            : 3 15
procedure_call       : 22
procedure_call_args  : 53
program              : 0
program_body         : 1 2 3
scope_body           : 5 6 7 8 9 13 14 15 27 29 30 31 32 40 43
statement            : 13 28 33 34 35 36 39 42
term                 : 61 63 136 137 138 139 140 141
variable_assignment  : 19 29 29 30 31 33 33 34 35 52 67 75 83
variable_declaration : 18
variable_decrement_increment : 23 31 32 35 36 83 84 85 86 87 88 89 96 105 106 107 152 154
variable_definition  : 10 17 30 32 34 36 90
while_statement      : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . K_PROGRAM IDENTIFIER LCURLY program_body RCURLY

    K_PROGRAM       shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> K_PROGRAM . IDENTIFIER LCURLY program_body RCURLY

    IDENTIFIER      shift and go to state 3


state 3

    (1) program -> K_PROGRAM IDENTIFIER . LCURLY program_body RCURLY

    LCURLY          shift and go to state 4


state 4

    (1) program -> K_PROGRAM IDENTIFIER LCURLY . program_body RCURLY
    (2) program_body -> . function program_body
    (3) program_body -> . procedure program_body
    (4) program_body -> . empty
    (5) function -> . K_FUNCTION K_INTEGER IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (6) function -> . K_FUNCTION K_DOUBLE IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (7) function -> . K_FUNCTION K_STRING IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (8) procedure -> . K_PROCEDURE IDENTIFIER LPAREN RPAREN LCURLY scope_body RCURLY
    (9) procedure -> . K_PROCEDURE IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (155) empty -> .

    K_FUNCTION      shift and go to state 9
    K_PROCEDURE     shift and go to state 10
    RCURLY          reduce using rule 155 (empty -> .)

    program_body                   shift and go to state 5
    function                       shift and go to state 6
    procedure                      shift and go to state 7
    empty                          shift and go to state 8

state 5

    (1) program -> K_PROGRAM IDENTIFIER LCURLY program_body . RCURLY

    RCURLY          shift and go to state 11


state 6

    (2) program_body -> function . program_body
    (2) program_body -> . function program_body
    (3) program_body -> . procedure program_body
    (4) program_body -> . empty
    (5) function -> . K_FUNCTION K_INTEGER IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (6) function -> . K_FUNCTION K_DOUBLE IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (7) function -> . K_FUNCTION K_STRING IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (8) procedure -> . K_PROCEDURE IDENTIFIER LPAREN RPAREN LCURLY scope_body RCURLY
    (9) procedure -> . K_PROCEDURE IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (155) empty -> .

    K_FUNCTION      shift and go to state 9
    K_PROCEDURE     shift and go to state 10
    RCURLY          reduce using rule 155 (empty -> .)

    function                       shift and go to state 6
    program_body                   shift and go to state 12
    procedure                      shift and go to state 7
    empty                          shift and go to state 8

state 7

    (3) program_body -> procedure . program_body
    (2) program_body -> . function program_body
    (3) program_body -> . procedure program_body
    (4) program_body -> . empty
    (5) function -> . K_FUNCTION K_INTEGER IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (6) function -> . K_FUNCTION K_DOUBLE IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (7) function -> . K_FUNCTION K_STRING IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (8) procedure -> . K_PROCEDURE IDENTIFIER LPAREN RPAREN LCURLY scope_body RCURLY
    (9) procedure -> . K_PROCEDURE IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (155) empty -> .

    K_FUNCTION      shift and go to state 9
    K_PROCEDURE     shift and go to state 10
    RCURLY          reduce using rule 155 (empty -> .)

    procedure                      shift and go to state 7
    program_body                   shift and go to state 13
    function                       shift and go to state 6
    empty                          shift and go to state 8

state 8

    (4) program_body -> empty .

    RCURLY          reduce using rule 4 (program_body -> empty .)


state 9

    (5) function -> K_FUNCTION . K_INTEGER IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (6) function -> K_FUNCTION . K_DOUBLE IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY
    (7) function -> K_FUNCTION . K_STRING IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY

    K_INTEGER       shift and go to state 14
    K_DOUBLE        shift and go to state 15
    K_STRING        shift and go to state 16


state 10

    (8) procedure -> K_PROCEDURE . IDENTIFIER LPAREN RPAREN LCURLY scope_body RCURLY
    (9) procedure -> K_PROCEDURE . IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY

    IDENTIFIER      shift and go to state 17


state 11

    (1) program -> K_PROGRAM IDENTIFIER LCURLY program_body RCURLY .

    $end            reduce using rule 1 (program -> K_PROGRAM IDENTIFIER LCURLY program_body RCURLY .)


state 12

    (2) program_body -> function program_body .

    RCURLY          reduce using rule 2 (program_body -> function program_body .)


state 13

    (3) program_body -> procedure program_body .

    RCURLY          reduce using rule 3 (program_body -> procedure program_body .)


state 14

    (5) function -> K_FUNCTION K_INTEGER . IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY

    IDENTIFIER      shift and go to state 18


state 15

    (6) function -> K_FUNCTION K_DOUBLE . IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY

    IDENTIFIER      shift and go to state 19


state 16

    (7) function -> K_FUNCTION K_STRING . IDENTIFIER LPAREN arguments RPAREN LCURLY scope_body RCURLY

    IDENTIFIER      shift and go to state 20


state 17

    (8) procedure -> K_PROCEDURE IDENTIFIER . LPAREN RPAREN LCURLY scope_body RCURLY
    (9) procedure -> K_PROCEDURE IDENTIFIER . LPAREN arguments RPAREN LCURLY scope_body RCURLY

    LPAREN          shift and go to state 21


state 18

    (5) function -> K_FUNCTION K_INTEGER IDENTIFIER . LPAREN arguments RPAREN LCURLY scope_body RCURLY

    LPAREN          shift and go to state 22


state 19

    (6) function -> K_FUNCTION K_DOUBLE IDENTIFIER . LPAREN arguments RPAREN LCURLY scope_body RCURLY

    LPAREN          shift and go to state 23


state 20

    (7) function -> K_FUNCTION K_STRING IDENTIFIER . LPAREN arguments RPAREN LCURLY scope_body RCURLY

    LPAREN          shift and go to state 24


state 21

    (8) procedure -> K_PROCEDURE IDENTIFIER LPAREN . RPAREN LCURLY scope_body RCURLY
    (9) procedure -> K_PROCEDURE IDENTIFIER LPAREN . arguments RPAREN LCURLY scope_body RCURLY
    (10) arguments -> . variable_definition arguments
    (11) arguments -> . COMMA arguments
    (12) arguments -> . empty
    (91) variable_definition -> . K_INTEGER identifiers
    (92) variable_definition -> . K_DOUBLE identifiers
    (93) variable_definition -> . K_STRING identifiers
    (99) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET RBRACKET
    (100) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET RBRACKET
    (101) variable_definition -> . K_STRING IDENTIFIER LBRACKET RBRACKET
    (102) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET expression RBRACKET
    (103) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET expression RBRACKET
    (104) variable_definition -> . K_STRING IDENTIFIER LBRACKET expression RBRACKET
    (105) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (106) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (107) variable_definition -> . K_STRING IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (155) empty -> .

  ! shift/reduce conflict for RPAREN resolved as shift
    RPAREN          shift and go to state 25
    COMMA           shift and go to state 28
    K_INTEGER       shift and go to state 30
    K_DOUBLE        shift and go to state 31
    K_STRING        shift and go to state 32

  ! RPAREN          [ reduce using rule 155 (empty -> .) ]

    arguments                      shift and go to state 26
    variable_definition            shift and go to state 27
    empty                          shift and go to state 29

state 22

    (5) function -> K_FUNCTION K_INTEGER IDENTIFIER LPAREN . arguments RPAREN LCURLY scope_body RCURLY
    (10) arguments -> . variable_definition arguments
    (11) arguments -> . COMMA arguments
    (12) arguments -> . empty
    (91) variable_definition -> . K_INTEGER identifiers
    (92) variable_definition -> . K_DOUBLE identifiers
    (93) variable_definition -> . K_STRING identifiers
    (99) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET RBRACKET
    (100) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET RBRACKET
    (101) variable_definition -> . K_STRING IDENTIFIER LBRACKET RBRACKET
    (102) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET expression RBRACKET
    (103) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET expression RBRACKET
    (104) variable_definition -> . K_STRING IDENTIFIER LBRACKET expression RBRACKET
    (105) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (106) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (107) variable_definition -> . K_STRING IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (155) empty -> .

    COMMA           shift and go to state 28
    K_INTEGER       shift and go to state 30
    K_DOUBLE        shift and go to state 31
    K_STRING        shift and go to state 32
    RPAREN          reduce using rule 155 (empty -> .)

    arguments                      shift and go to state 33
    variable_definition            shift and go to state 27
    empty                          shift and go to state 29

state 23

    (6) function -> K_FUNCTION K_DOUBLE IDENTIFIER LPAREN . arguments RPAREN LCURLY scope_body RCURLY
    (10) arguments -> . variable_definition arguments
    (11) arguments -> . COMMA arguments
    (12) arguments -> . empty
    (91) variable_definition -> . K_INTEGER identifiers
    (92) variable_definition -> . K_DOUBLE identifiers
    (93) variable_definition -> . K_STRING identifiers
    (99) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET RBRACKET
    (100) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET RBRACKET
    (101) variable_definition -> . K_STRING IDENTIFIER LBRACKET RBRACKET
    (102) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET expression RBRACKET
    (103) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET expression RBRACKET
    (104) variable_definition -> . K_STRING IDENTIFIER LBRACKET expression RBRACKET
    (105) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (106) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (107) variable_definition -> . K_STRING IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (155) empty -> .

    COMMA           shift and go to state 28
    K_INTEGER       shift and go to state 30
    K_DOUBLE        shift and go to state 31
    K_STRING        shift and go to state 32
    RPAREN          reduce using rule 155 (empty -> .)

    arguments                      shift and go to state 34
    variable_definition            shift and go to state 27
    empty                          shift and go to state 29

state 24

    (7) function -> K_FUNCTION K_STRING IDENTIFIER LPAREN . arguments RPAREN LCURLY scope_body RCURLY
    (10) arguments -> . variable_definition arguments
    (11) arguments -> . COMMA arguments
    (12) arguments -> . empty
    (91) variable_definition -> . K_INTEGER identifiers
    (92) variable_definition -> . K_DOUBLE identifiers
    (93) variable_definition -> . K_STRING identifiers
    (99) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET RBRACKET
    (100) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET RBRACKET
    (101) variable_definition -> . K_STRING IDENTIFIER LBRACKET RBRACKET
    (102) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET expression RBRACKET
    (103) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET expression RBRACKET
    (104) variable_definition -> . K_STRING IDENTIFIER LBRACKET expression RBRACKET
    (105) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (106) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (107) variable_definition -> . K_STRING IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (155) empty -> .

    COMMA           shift and go to state 28
    K_INTEGER       shift and go to state 30
    K_DOUBLE        shift and go to state 31
    K_STRING        shift and go to state 32
    RPAREN          reduce using rule 155 (empty -> .)

    arguments                      shift and go to state 35
    variable_definition            shift and go to state 27
    empty                          shift and go to state 29

state 25

    (8) procedure -> K_PROCEDURE IDENTIFIER LPAREN RPAREN . LCURLY scope_body RCURLY

    LCURLY          shift and go to state 36


state 26

    (9) procedure -> K_PROCEDURE IDENTIFIER LPAREN arguments . RPAREN LCURLY scope_body RCURLY

    RPAREN          shift and go to state 37


state 27

    (10) arguments -> variable_definition . arguments
    (10) arguments -> . variable_definition arguments
    (11) arguments -> . COMMA arguments
    (12) arguments -> . empty
    (91) variable_definition -> . K_INTEGER identifiers
    (92) variable_definition -> . K_DOUBLE identifiers
    (93) variable_definition -> . K_STRING identifiers
    (99) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET RBRACKET
    (100) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET RBRACKET
    (101) variable_definition -> . K_STRING IDENTIFIER LBRACKET RBRACKET
    (102) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET expression RBRACKET
    (103) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET expression RBRACKET
    (104) variable_definition -> . K_STRING IDENTIFIER LBRACKET expression RBRACKET
    (105) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (106) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (107) variable_definition -> . K_STRING IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (155) empty -> .

    COMMA           shift and go to state 28
    K_INTEGER       shift and go to state 30
    K_DOUBLE        shift and go to state 31
    K_STRING        shift and go to state 32
    RPAREN          reduce using rule 155 (empty -> .)

    variable_definition            shift and go to state 27
    arguments                      shift and go to state 38
    empty                          shift and go to state 29

state 28

    (11) arguments -> COMMA . arguments
    (10) arguments -> . variable_definition arguments
    (11) arguments -> . COMMA arguments
    (12) arguments -> . empty
    (91) variable_definition -> . K_INTEGER identifiers
    (92) variable_definition -> . K_DOUBLE identifiers
    (93) variable_definition -> . K_STRING identifiers
    (99) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET RBRACKET
    (100) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET RBRACKET
    (101) variable_definition -> . K_STRING IDENTIFIER LBRACKET RBRACKET
    (102) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET expression RBRACKET
    (103) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET expression RBRACKET
    (104) variable_definition -> . K_STRING IDENTIFIER LBRACKET expression RBRACKET
    (105) variable_definition -> . K_INTEGER IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (106) variable_definition -> . K_DOUBLE IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (107) variable_definition -> . K_STRING IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (155) empty -> .

    COMMA           shift and go to state 28
    K_INTEGER       shift and go to state 30
    K_DOUBLE        shift and go to state 31
    K_STRING        shift and go to state 32
    RPAREN          reduce using rule 155 (empty -> .)

    arguments                      shift and go to state 39
    variable_definition            shift and go to state 27
    empty                          shift and go to state 29

state 29

    (12) arguments -> empty .

    RPAREN          reduce using rule 12 (arguments -> empty .)


state 30

    (91) variable_definition -> K_INTEGER . identifiers
    (99) variable_definition -> K_INTEGER . IDENTIFIER LBRACKET RBRACKET
    (102) variable_definition -> K_INTEGER . IDENTIFIER LBRACKET expression RBRACKET
    (105) variable_definition -> K_INTEGER . IDENTIFIER LBRACKET variable_decrement_increment RBRACKET
    (94) identifiers -> . IDENTIFIER identifiers
    (95) identifiers -> . IDENTIFIER LBRACKET expression RBRACKET identifiers
    (96) identifiers -> . IDENTIFIER LBRACKET variable_decrement_increment RBRACKET identifiers
    (97) identifiers -> . COMMA identifiers
    (98) identifiers -> . empty
    (155) empty -> .

  ! shift/reduce conflict for COMMA resolved as shift
    IDENTIFIER      shift and go to state 41
    COMMA           shift and go to state 42
    K_INTEGER       reduce using rule 155 (empty -> .)
    K_DOUBLE        reduce using rule 155 (empty -> .)
